# binary_tree

./: README.MD  dune-project
.github/workflows/: ocaml.yml
lib/: bitree.ml  dune  impl.ml
test/: bitree.ml  dune  property.ml  unit.ml
